--- a/samples/TwitchChatBot.ConsoleApp/appsettings.json
+++ b/samples/TwitchChatBot.ConsoleApp/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Twitch": {
     "UserName": "SchwabenCode",
-    "AcessToken": "abcdefghijklmnopqrstuvwxyz",
+    "AccessToken": "abcdefghijklmnopqrstuvwxyz",
     "Channels": [ "BenAbt" ]
   }
 }
