--- a/samples/TwitchChatBot.WebApp/appsettings.json
+++ b/samples/TwitchChatBot.WebApp/appsettings.json
@@ -10,7 +10,7 @@
 
   "Twitch": {
     "UserName": "SchwabenCode",
-    "AcessToken": "abcdefghijklmnopqrstuvwxyz",
+    "AccessToken": "abcdefghijklmnopqrstuvwxyz",
     "Channels": ["BenAbt"]
   }
 }
